school-app-181210/force-app/main/default/objects/Grade__c/Grade__c.object-meta.xml
<CustomObject>
    <label>Grade</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Grade Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>