school-app-181210/force-app/main/default/objects/Grade__c/fields/Needs_Grading__c.field-meta.xml
<CustomField>
    <fullName>Needs_Grading__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Needs Grading</label>
    <type>Checkbox</type>
</CustomField>